# pangyplot

./: .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  README.md  RELEASING.md  TODO.md  babel.cfg  benchmark_ingest.py  benchmark_memory.py  compile_translations.sh  package-lock.json  package.json  pangyplot.py  pangyplot_app.py  playwright.config.js  requirements.txt  run_mc.sh  run_pggb.sh  setup.py  vitest.config.js  wsgi.py
.claude/agents/: css-reviewer.md
.github/workflows/: docker-publish.yml
BubbleGun/: Bubble.py  BubbleChain.py  Node.py  connect_bubbles.py  find_bubbles.py  find_parents.py
benchmark_results/: baseline.json  optimized_gfa.json
benchmark_results/timing/: README.md  per_chromosome_summary.csv  per_chromosome_summary_v2_gbz.csv  per_phase_timing.csv  wide_minigraph_cactus.tsv  wide_pggb.tsv
context/: backend-database.md  backend-query.md  bp-proportional-links.md  bubble-circle-pop.md  bubble-link-refactor.md  bubble-links.md  bubblegun-flat-repr.md  bubblegun-migration.md  chain-decomposition.md  drag-system.md  frontend-design.md  gbwt-migration.md  gbwt-mmap-cpp-investigation.md  gbz-native-backend.md  gene-halo-system.md  graph-data-pipeline.md  js-engine.md  junction-segment-rendering.md  multi-resolution-zoom.md  odgi-native-integration.md  path-tracing.md  polychain-system.md  preprocessing-scaling.md  simobject-refactor.md  simplify-engine.md  testing.md  vasturiano-migration.md  viewer-engine.md
docker/: Dockerfile  Dockerfile.dockerignore  Dockerfile.gpu  Dockerfile.gpu.dockerignore  docker-compose.yml  docker-entrypoint.sh
docs/: .readthedocs.yaml  Makefile  make.bat  requirements.txt
docs/scripts/: capture_screenshots.py
docs/source/: conf.py  index.rst  principles.rst  substitutions.rst
etc/scripts/: chr3.sh  process_hprc_data.sh
example/: DRB1-3123.gfa
gbwt/: Cargo.toml
gbwt/build-cpp/: main.cpp
gbwt/graphd/: .gitignore  IMPLEMENTATION.md  Makefile  README.md  main.cpp
gbwt/sidecar/: .gitignore  Cargo.toml  IMPLEMENTATION.md  Makefile  README.md  main.cpp
gbwt/sidecar-cpp/: README.md  main.cpp
gbwt/sidecar/src/: main.rs
pangyplot/: app.py  organisms.py  path_sort_order.txt  routes.py  version.py
pangyplot/commands/: add.py  annotate.py  cytoband.py  preprocess.py  run.py  serve.py  setup.py  status.py
pangyplot/db/: chain_polyline.py  db_utils.py  gbwt_client.py  gbwt_manager.py  initialize_indexes.py  integrity_check.py  path_codec.py  query.py
pangyplot/objects/: Annotation.py  Bubble.py  BubbleEnd.py  BubbleJunction copy.py  BubbleJunction.py  Chain.py  ChainJunction.py  Junction.py  Link.py  Path.py  Segment.py
pangyplot/parser/: parse_cytoband.py  parse_gfa.py  parse_gff3.py
pangyplot/preprocess/: cytoband_generator.py  ensure_paths.py  gbwt_build.py  gbz.py  graphd.py  (+4 more)
tests/: conftest.py  quick_index_test.py  serve_command_test.py  test_bubble_links.py  test_drb1_pipeline.py  test_parse_layout.py  test_parse_utils.py  test_pop_links.py  test_query.py  test_setup_cytoband.py
tools/: architecture.html  architecture.json  architecture.py  architecture.yaml  architecture_html.py  fingerprint_bubbles.py
tools/gbwt-build/: Cargo.toml  README.md
tools/gbwt-build/src/: main.rs
tools/gbwt-sidecar/: Cargo.toml  README.md
tools/gbwt-sidecar/src/: main.rs
tools/gbwt-spike/: Cargo.toml  README.md
tools/gbwt-spike/src/: main.rs
(+1157 files in other folders)
