# Native GBWT code for PangyPlot's path engine (GBWT migration Stage 3).
#
# Two production crates behind one workspace so gbz/simple-sds compile once and
# share a lockfile + target/:
#   sidecar/ -- serving: loads a per-chr GBWT/GBZ, answers path queries over HTTP
#   build/   -- ingest:  builds a compact graph.gbwt from PangyPlot's paths (no vg)
[workspace]
resolver = "2"
members = ["sidecar", "build"]

[workspace.dependencies]
gbz = { git = "https://github.com/jltsiren/gbwt-rs" }
simple-sds = "0.4.1"
tiny_http = "0.12"
serde_json = "1"

[profile.release]
opt-level = 3
