[package]
name = "gbwt-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

# Persistent GBWT path-service for PangyPlot (GBWT migration Stage 3).
# Loads a per-chromosome GBWT/GBZ in memory and answers path queries over
# localhost HTTP. Flask proxies these and does region filtering + varint encoding
# in Python (reusing Stage 2), so node ids are treated as PangyPlot segment ids.

[dependencies]
gbz.workspace = true
simple-sds.workspace = true
tiny_http.workspace = true
serde_json.workspace = true
