[package]
name = "gbwt-build"
version = "0.1.0"
edition = "2021"
description = "Build a compact GBWT from PangyPlot paths (no vg, no chopping)"

[[bin]]
name = "gbwt-build"
path = "src/main.rs"

# Same crates as the sidecar: gbwt-rs (package `gbz`) provides GBWTBuilder;
# simple-sds provides serialization. gbwt-rs is a reader for GBZ but a full
# builder for GBWT, which is all the path engine needs.
[dependencies]
gbz = { git = "https://github.com/jltsiren/gbwt-rs" }
simple-sds = "0.4.1"

[profile.release]
opt-level = 3
