[package]
name = "gbwt-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

# Persistent GBWT path-service for PangyPlot (GBWT migration Stage 3).
# Holds a per-chromosome GBZ in memory and answers path queries over localhost
# HTTP. Flask proxies these and does region filtering + varint encoding in Python
# (reusing Stage 2), so node ids are treated as PangyPlot segment ids directly.

[dependencies]
gbz = { git = "https://github.com/jltsiren/gbwt-rs" }
simple-sds = "0.4.1"
tiny_http = "0.12"
serde_json = "1"
