[package]
name = "gbwt-spike"
version = "0.0.0"
edition = "2021"
publish = false

# GBWT Stage 3 spike harness. Throwaway benchmark bin for the GBWT migration
# (see ../../context/gbwt-migration.md, "Stage 3 spike"). Not part of the app.
#
# gbwt-rs's package/lib name is `gbz` (v0.6.1). simple-sds is on crates.io.

[dependencies]
gbz = { git = "https://github.com/jltsiren/gbwt-rs" }
simple-sds = "0.4.1"
